--- a/test/gitlab-ce/item.yaml
+++ b/test/gitlab-ce/item.yaml
@@ -1,3 +1,3 @@
 categories:
   - storage
-icon_url: http://192.168.100.165/root/charts/-/raw/master/chart-icons/gitlab-ce.png
+icon_url: https://raw.githubusercontent.com/1634864160/charts/master/chart-icons/gitlab-ce.png
