--- a/test/gitlab-ce/15.5.3-ce.0/questions.yaml
+++ b/test/gitlab-ce/15.5.3-ce.0/questions.yaml
@@ -177,7 +177,7 @@ questions:
                         required: true
 
   - variable: environmentVariables
-    label: "GitLab-CE image environment"
+    label: "GitLab image environment"
     group: "Environment Configuration"
     schema:
       type: list
